[project]

name = "pymud"  # Required
version = "0.21.0a1"  # Required
description = "a MUD Client written in Python"  # Optional
readme = "README.md" # Optional
requires-python = ">=3.7"
# license = {file = "LICENSE.txt"}
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

keywords = ["MUD", "multi-user dungeon", "client"]  # Optional
authors = [
  {name = "newstart@pkuxkx", email = "crapex@hotmail.com" } # Optional
]
maintainers = [
  {name = "newstart@pkuxkx", email = "crapex@hotmail.com" } # Optional
]

classifiers = [  # Optional
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  #"Development Status :: 5 - Production/Stable",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Games/Entertainment :: Multi-User Dungeons (MUD)",
  # "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "wcwidth",
  "pyperclip",
  "pygments",
  "prompt-toolkit",
  "recommonmark>=0.7.1",
  "sphinx>=5.3.0",
  "sphinx-markdown-tables>=0.0.17",
  "sphinx-rtd-theme>=2.0.0",
  "piccolo-theme>=0.24.0",
]

[project.urls]  # Optional
"Homepage" = "https://github.com/crapex/pymud/"
"Bug Reports" = "https://github.com/crapex/pymud/issues"
"Source" = "https://github.com/crapex/pymud/"
"document" = "https://pymud.readthedocs.io/"

[project.scripts]  # Optional
pymud = "pymud:main"

# This is configuration specific to the `setuptools` build backend.
# If you are using a different build backend, you will need to change this.
[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
# package-data = {"sample" = ["*.dat"]}

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
